--- a/Landing.css
+++ b/Landing.css
@@ -1,5 +1,67 @@
-.X {
+body {
+    height:100vh;
+    display:flex;
+    flex-direction: column;
+    margin:0px;
+}
+
+.Blue {
     display:flex;
     flex-direction:column;
-    align-items: center;
+    flex-wrap: wrap;
+    background-color:aquamarine;
 }
+
+header {
+    display:flex;
+    flex-wrap: nowrap;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size:16px;
+    justify-content: space-around;
+    margin-bottom:40px;
+}
+
+.Left{
+    align-self:center;
+    margin: 20px 40px 0 40px;
+    font-size:30px;
+    color:brown;
+}
+
+.allright {
+    display:flex;
+    align-items:center;
+    justify-content: space-between;
+    margin: 20px 40px 0 40px;
+    gap:20px;
+    color:brown;
+
+}
+
+.bottomHeader{
+    margin-left:40px;
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    color:brown;
+}
+
+.awesome {
+    font-size:35px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+img {
+    max-width: 400px;
+}
+
+footer {
+    margin-top:auto;
+    display:flex;
+    background-color: lightblue;
+    justify-content:center;
+    padding:30px;
+    margin:1;
+    font-style: oblique;
+}
+
