--- a/Landing.css
+++ b/Landing.css
@@ -17,43 +17,76 @@ header {
     flex-wrap: nowrap;
     font-family:Arial, Helvetica, sans-serif;
     font-size:16px;
-    justify-content: space-around;
-    margin-bottom:40px;
+    justify-content: space-between;
+    margin: 40px;
 }
 
 .Left{
     align-self:center;
-    margin: 20px 40px 0 40px;
     font-size:30px;
     color:brown;
 }
 
 .allright {
     display:flex;
-    align-items:center;
-    justify-content: space-between;
-    margin: 20px 40px 0 40px;
-    gap:20px;
+    justify-content: center;
+    align-self: center;
+    gap:30px;
     color:brown;
-
 }
 
 .bottomHeader{
-    margin-left:40px;
     display:flex;
     flex-direction:row;
-    justify-content: center;
+    justify-content:space-between;
     color:brown;
+    gap:15px;
+    margin: 40px
+
+}
+
+.bottomleft {
+    display:flex;
+    flex-direction:column;
+    align-content: center;
+    gap:10px;
+    font-family: sans-serif;
+    justify-content: center;
 }
 
 .awesome {
-    font-size:35px;
+    font-size:40px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-img {
-    max-width: 400px;
+.subtext {
+    font-size:20px;
+    color:rgb(213, 68, 68)
 }
+
+button {
+    background-color: blue;
+    color:whitesmoke;
+    border-radius:5px;
+    max-width:100px;
+}
+
+img {
+    max-width: 200px;
+}
+
+.img2 {
+    max-width: 10px;
+}
+
+
+.boxes {
+    display:flex;
+    flex-wrap: wrap;
+    border-color: blue;
+    max-width: 10px;
+}
+
 
 footer {
     margin-top:auto;
