--- a/Landing.css
+++ b/Landing.css
@@ -18,7 +18,7 @@ header {
     font-family:Arial, Helvetica, sans-serif;
     font-size:16px;
     justify-content: space-between;
-    margin: 40px;
+    margin: 30px;
 }
 
 .Left{
@@ -41,7 +41,8 @@ header {
     justify-content:space-between;
     color:brown;
     gap:15px;
-    margin: 40px
+    margin: 30px;
+    margin-bottom:60px;
 
 }
 
@@ -75,16 +76,83 @@ img {
     max-width: 200px;
 }
 
+.info {
+    display:flex;
+    justify-content: center;
+    padding:20px;
+    font-family: fantasy;
+    font-weight:bold;
+}
+
+
 .img2 {
-    max-width: 10px;
+    width:100px;
+    border:5px solid blue;
 }
 
 
 .boxes {
     display:flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    justify-content: center;
     border-color: blue;
-    max-width: 10px;
+    gap:20px;
+
+
+}
+
+
+
+h2 {
+    font-size:10px;
+    display:flex;
+    flex-wrap: wrap;
+    width:100px;
+}
+
+.Inspiring {
+    background-color: grey;
+    display:flex;
+    flex-wrap:wrap;
+    padding: 20px;
+    margin-top:20px;
+    align-content: center;
+    flex-direction: column;
+}
+
+.quote, .gandhi {
+    display:flex;
+    width:200px;
+    flex-direction:column;
+}
+
+.quote {
+    font-style: italic;
+}
+
+.gandhi {
+    align-items:end;
+    margin-top:5px;
+
+}
+
+.Call {
+    background-color: blue;
+    padding:10px;
+    margin:20px 30px;
+    color:white;
+    display:flex;
+    justify-content: space-around;
+}
+
+.leftcall {
+    display:flex;
+    flex-direction:column;
+    justify-content: start;
+}
+
+.text2{
+    font-size:larger;
 }
 
 
